ci: screensaver fix and generic switch monitor and cleanup

--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -4,8 +4,7 @@ bindd = SUPER, R, File manager, exec, uwsm app -- nautilus --new-window
 # bindd = SUPER, B, Browser, exec, $browser
 # bindd = SUPER SHIFT, B, Browser (private), exec, $browser --private
 bindd = SUPER, M, Music, exec, hyprland-launch-or-focus spotify
-# bindd = SUPER, N, Editor, exec, hyprland-launch-editor
-# bindd = SUPER, T, Activity, exec, $terminal -e btop
+# bindd = SUPER, T, Activity, exec, ghostty -e btop
 # bindd = SUPER, G, Signal, exec, hyprland-launch-or-focus signal "uwsm app -- signal-desktop"
 # bindd = SUPER, O, Obsidian, exec, hyprland-launch-or-focus obsidian "uwsm app -- obsidian -disable-gpu --enable-wayland-ime"
 
@@ -27,13 +26,11 @@ bind = SUPER ALT, mouse_down, exec, hyprctl keyword cursor:zoom_factor "$(hyprct
 bind = SUPER ALT, mouse_up, exec, hyprctl keyword cursor:zoom_factor "$(hyprctl getoption cursor:zoom_factor | awk 'NR==1 {factor = $2; if (factor < 1) {factor = 1}; print factor / 2.0}')"
 
 # FEATURES / EXTRAS (UserScripts)
-bind = SUPER, W, exec, hyprland-theme-bg-set
+bind = SUPER, W, exec, hyprland-bg-set
 bind = SUPER, V, exec, hyprland-clipboard-manager
 bind = SUPER, B, exec, hyprland-toggle-blur
 
 bind = SUPER, Q, killactive, # close active (not kill)
-# bind = SUPER SHIFT, Q, exec, $scriptsDir/KillActiveProcess.sh # Kill active process
-# bind = SUPER SHIFT, N, exec, swaync-client -t -sw # swayNC notification panel
 
 # Resize windows
 binde = SUPER SHIFT, left, resizeactive,-50 0
