ci: wallpaper on startup

--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -9,4 +9,5 @@ exec-once = uwsm app -- walker --gapplication-service &
 exec-once = uwsm app -- flameshot
 exec-once = uwsm app -- wl-paste --type text --watch cliphist store
 exec-once = uwsm app -- wl-paste --type image --watch cliphist store
+exec-once = hyprland-apply-wallpaper "$BACKGROUNDS_DIR/current_wallpaper"
 
