--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -26,7 +26,7 @@ bind = SUPER ALT, mouse_down, exec, hyprctl keyword cursor:zoom_factor "$(hyprct
 bind = SUPER ALT, mouse_up, exec, hyprctl keyword cursor:zoom_factor "$(hyprctl getoption cursor:zoom_factor | awk 'NR==1 {factor = $2; if (factor < 1) {factor = 1}; print factor / 2.0}')"
 
 # FEATURES / EXTRAS (UserScripts)
-bind = SUPER, W, exec, hyprland-bg-set
+bind = SUPER, W, exec, hyprland-select-wallpaper
 bind = SUPER, V, exec, hyprland-clipboard-manager
 bind = SUPER, B, exec, hyprland-toggle-blur
 
