--- a/.config/hypr/envs.conf
+++ b/.config/hypr/envs.conf
@@ -1,3 +1,5 @@
+env = PATH,$HOME/.config/bin/:$PATH
+env = BACKGROUNDS_DIR,$HOME/personal/background/
 # Extra env variables
 # Cursor size
 env = XCURSOR_SIZE,24
