fix: flameshot notifications and wrong monitor

--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -1,9 +1,8 @@
 # Application bindings
 bindd = SUPER, return, Terminal, exec, uwsm app -- ghostty
-bindd = SUPER, R, File manager, exec, uwsm app -- nautilus --new-window
+bindd = SUPER, R, File manager, exec, uwsm app -- nemo
 # bindd = SUPER, B, Browser, exec, $browser
 # bindd = SUPER SHIFT, B, Browser (private), exec, $browser --private
-bindd = SUPER, M, Music, exec, hyprland-launch-or-focus spotify
 # bindd = SUPER, T, Activity, exec, ghostty -e btop
 # bindd = SUPER, G, Signal, exec, hyprland-launch-or-focus signal "uwsm app -- signal-desktop"
 # bindd = SUPER, O, Obsidian, exec, hyprland-launch-or-focus obsidian "uwsm app -- obsidian -disable-gpu --enable-wayland-ime"
@@ -12,6 +11,7 @@ bindd = SUPER, M, Music, exec, hyprland-launch-or-focus spotify
 # bindd = SUPER, Y, YouTube, exec, hyprland-launch-or-focus YouTube "hyprland-launch-webapp 'https://youtube.com/'"
 bindd = SUPER SHIFT, C, WhatsApp, exec, hyprland-launch-or-focus WhatsApp "hyprland-launch-webapp 'https://web.whatsapp.com/'"
 bindd = SUPER SHIFT, E, Excalidraw, exec, hyprland-launch-or-focus Excalidraw "hyprland-launch-webapp 'https://excalidraw.com/'"
+bindd = SUPER SHIFT, M, Music, exec, hyprland-launch-or-focus spotify
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 bindd = SUPER, SPACE, Launch apps, exec, uwsm app -- walker -p "Start…"
