--- a/.config/hypr/envs.conf
+++ b/.config/hypr/envs.conf
@@ -1,5 +1,6 @@
 env = PATH,$HOME/.config/bin/:$PATH
 env = BACKGROUNDS_DIR,$HOME/personal/background/
+
 # Extra env variables
 # Cursor size
 env = XCURSOR_SIZE,24
@@ -29,6 +30,7 @@ ecosystem {
 }
 
 env = EDITOR,nvim
+env = DIFFPROG,nvim
 env = TERMINAL,ghostty
 
 env = LIBVA_DRIVER_NAME,nvidia
